--- a/app/views/users/articles/new.html.slim
+++ b/app/views/users/articles/new.html.slim
@@ -1,6 +1,6 @@
 .row
   h2
-    = I18n.t("app.actions.new_article")
+    = title(I18n.t("app.actions.new_article"))
   .medium-6.columns
     = simple_form_for article do |f|
       .form-inputs
