--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -11,7 +11,9 @@
       legend
         | Create your
         '
-        strong Rails Base example site
+        strong
+          = I18n.t("app.name")
+          |  example site
         '
         | account
 
