--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -2,6 +2,8 @@
   .columns
     h2
       = title(I18n.t("app.actions.index"))
+    small.right.create-article-link
+      = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button"
     dl
       - articles.each do |article|
         = render article
