Added edit and show actions with rspec coverage

--- a/app/views/articles/_article.html.slim
+++ b/app/views/articles/_article.html.slim
@@ -3,6 +3,8 @@
     = article.title
   dd
     = article.description
-  em
+  em.right
     = article.author
+
+  = render "actions", article: article
   hr
