--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,9 +1,9 @@
 .row
   .columns
     h2
-      = title(I18n.t("app.actions.index"))
+      = title(I18n.t("app.articles.index"))
     small.right.create-article-link
-      = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button"
+      = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button round"
     dl
       - articles.each do |article|
         = render article
