--- a/app/views/users/articles/new.html.slim
+++ b/app/views/users/articles/new.html.slim
@@ -1,11 +1,5 @@
 .row
-  h2
-    = title(I18n.t("app.actions.new_article"))
-  .medium-6.columns
-    = simple_form_for article do |f|
-      .form-inputs
-        = f.input :title, required: false, autofocus: true
-        = f.input :description, required: false
-
-      .form-actions
-        = f.button :submit, I18n.t("app.actions.create")
+  .columns
+    h2
+      = title(I18n.t("app.articles.new_title"))
+    = render "form"
