--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -5,6 +5,4 @@
     small.right.create-article-link
       = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button round"
     dl
-      - articles.each do |article|
-        = render article
-      end
+      = render articles
