--- a/app/views/application/_navigation_user.html.slim
+++ b/app/views/application/_navigation_user.html.slim
@@ -1,7 +1,9 @@
 ul.right
   - if user_signed_in?
     li.has-dropdown
-      a.user-dropdown(href="#") = current_user.full_name_with_email
+      a.user-dropdown(href="#")
+        = image_tag current_user.avatar.thumb.url, class: "avatar-image-header"
+
       ul.dropdown
         new_user_registration_path
         li
