--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -18,6 +18,7 @@
         | account
 
       .form-inputs
+        = f.input :avatar, as: :file
         = f.input :full_name, required: true, autofocus: true
         = f.input :email, required: true
         = f.input :password, required: true
