--- a/app/views/application/_navigation_user.html.slim
+++ b/app/views/application/_navigation_user.html.slim
@@ -2,7 +2,10 @@ ul.right
   - if user_signed_in?
     li.has-dropdown
       a.user-dropdown(href="#")
-        = image_tag current_user.avatar.thumb.url, class: "avatar-image-header"
+        - if current_user.avatar.present?
+          = image_tag current_user.avatar.thumb.url, class: "avatar-image-header"
+        - else
+          = current_user.full_name_with_email
 
       ul.dropdown
         new_user_registration_path
