--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -9,7 +9,11 @@
         url: registration_path(resource_name),
         html: { method: :put } do |f|
 
-      = image_tag resource.avatar.thumb.url, class: "user-avatar"
+      - if resource.avatar.present?
+        .row
+          .small-5.small-centered.columns.user-avatar-wrapper
+            = image_tag resource.avatar.large.url, class: "user-avatar th"
+
       .form-inputs
         = f.input :avatar, as: :file
         = f.input :full_name, required: true, autofocus: true
