--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -6,3 +6,5 @@
       = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button round"
     dl
       = render articles
+
+    = paginate articles
