Added remove article, new tests and some refactor specs

--- a/app/views/articles/_actions.html.slim
+++ b/app/views/articles/_actions.html.slim
@@ -1,7 +1,10 @@
 ul.button-group.round
-  li
-    = link_to I18n.t("app.actions.show"), article_path(article), class: "button tiny"
+  - if action_name == "index"
+    li
+      = link_to I18n.t("app.actions.show"), article_path(article), class: "button tiny"
 
   - if policy(article).manage?
     li
       = link_to I18n.t("app.actions.edit"), edit_article_path(article), class: "button tiny"
+    li
+      = link_to I18n.t("app.actions.remove"), article_path(article), class: "button tiny", method: :delete
