Added user id to comment, some refactor, added new tests

--- a/app/views/users/comments/_comment.html.slim
+++ b/app/views/users/comments/_comment.html.slim
@@ -1,4 +1,8 @@
-.column
-  em.medium-sized-font
-    = comment.text
-  hr
+.row
+  .column
+    .comment-text
+      = comment.text
+    .column.comment-author
+      em.medium-sized-font.right
+        = comment.author
+    hr
