--- a/app/views/users/articles/show.html.slim
+++ b/app/views/users/articles/show.html.slim
@@ -4,7 +4,7 @@
 
   .medium-8.columns
     dl
-      = render "articles/article", article: article
+      = render "articles/article"
 
   .medium-4.columns
     h4 Comments
