--- a/app/views/articles/_actions.html.slim
+++ b/app/views/articles/_actions.html.slim
@@ -1,9 +1,9 @@
-ul.button-group.round
+ul.button-group.round.right
   - if action_name == "index"
     li
       = link_to I18n.t("app.actions.show"), article_path(article), class: "button tiny"
 
-  - if policy(article).manage?
+  - if policy(article).own_object?
     li
       = link_to I18n.t("app.actions.edit"), edit_article_path(article), class: "button tiny"
     li
