--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,7 +23,8 @@ html class="no-js" lang="en"
       = render "navigation"
       = render "messages"
 
-      = yield
+      .row
+        = yield
 
     = render "footer"
 
