--- a/app/views/application/_navigation.html.slim
+++ b/app/views/application/_navigation.html.slim
@@ -2,7 +2,7 @@ nav.top-bar( data-topbar )
 
   ul.title-area
     li.name
-      h1 = link_to I18n.t("app.name"), root_path
+      h1 = link_to "Home", root_path
     li.toggle-topbar
       a(href="#")
         i.fi-list
