--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,8 +1,11 @@
 .columns
   h2
-    = title(I18n.t("app.articles.index"))
-  small.right.create-article-link
-    = link_to I18n.t("app.actions.create"), new_article_path, class: "tiny button round"
+    = title("Articles")
+
+  - if user_signed_in?
+    small.right.create-article-link
+      = link_to "Create", new_article_path, class: "tiny button round"
+
   dl
     = render articles
 
