--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -13,7 +13,7 @@
         .columns.edit-profile-photo
           .wrap.small-5.small-centered.columns.user-avatar-wrapper
             = attachment_image_tag(resource, :avatar, :fill, 150, 200, format: "jpg",
-                fallback: "defaultavatar.jpg", id: "avatar-image", class: "user-avatar th")
+                fallback: "defaultavatar.png", id: "avatar-image", class: "user-avatar th")
           .row.actions
             .change.left
               = f.input :avatar, as: :attachment, direct: true, presigned: true,
@@ -23,8 +23,9 @@
             .remove
               = link_to "Remove avatar", "#",
                   data: { "file-remove" => { selector: "avatar-image", hidden: "user_remove_avatar",
-                    file_input: "user_avatar", default: image_path("defaultavatar.jpg") } },
+                    file_input: "user_avatar", default: image_path("defaultavatar.png") } },
                   class: "button tiny alert #{resource.avatar.nil? ? 'hidden' : ''}"
+
               = f.check_box :remove_avatar, class: "hidden"
 
         = f.input :full_name, required: true, autofocus: true
